# batata-rpa

./: .gitignore  CLAUDE.md  README.md  README_zh.md  package.json  pnpm-lock.yaml  vite.config.ts
plugins/: example_plugin.lua
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/automation/desktop/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/automation/file/: mod.rs
src-tauri/src/automation/highlight/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/automation/web/: mod.rs
src-tauri/src/commands/: element.rs  execution.rs  mod.rs  recorder.rs  settings.rs  workflow.rs
src-tauri/src/element/: mod.rs
src-tauri/src/engine/: executor.rs  mod.rs  runtime.rs  variable.rs
src-tauri/src/plugin/: context.rs  loader.rs  lua_executor.rs  mod.rs  registry.rs
src-tauri/src/recorder/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/storage/: config.rs  mod.rs
src-tauri/src/storage/entities/: element_library.rs  mod.rs  workflow.rs
src/components/designer/: DebugPanel.vue  NodePalette.vue  PropertyPanel.vue  RecorderPanel.vue  VariablePanel.vue
src/components/designer/nodes/: ActionNode.vue  ConditionNode.vue  EndNode.vue  LoopNode.vue  StartNode.vue  TryCatchNode.vue
src/components/element/: ElementPicker.vue
src/components/layout/: AppHeader.vue
src/router/: index.ts
src/stores/: element.ts  execution.ts  index.ts  recorder.ts  workflow.ts
src/styles/: index.css
src/types/: element.ts  execution.ts  index.ts  workflow.ts
src/views/: Designer.vue  ElementLibrary.vue  Runner.vue  Settings.vue
